# UPC

./: __main__.py  pyproject.toml
UltimatePhysicsCalculato.egg-info/: PKG-INFO  SOURCES.txt
core/: calculation_registry.py  formula_registry.py  theme.py
core/chemistry/: periodic_table.py
core/chemistry/general/: calculations.py  enum.py  solver.py
core/common/: sections.py
core/custom/: formula_store.py  formulas.json  solver.py
core/math/: test.py
core/math/algebra/: calculations.py  enum.py  solver.py
core/math/handbook/: __init__.py  formulas.py  solver.py
core/physic/electrodynamics/: enum.py  solver.py
core/physic/mechanics/: enum.py  solver.py
electrodynamics/: calculations.py  enum.py  main.py
gui/: __init__.py  app.py  main_window.py  round_button.py  run_gui_file.py
gui/kv/: back_button.kv  formula_screen.kv  main_screen.kv  round_button.kv  section_screen.kv  small_round_button.kv  topic_screen.kv
gui/screens/: FormulaScreen.py  MainScreen.py  SectionScreen.py  TopicScreen.py  formula_screen.py  main_screen.py  section_screen.py  topic_screen.py
gui/services/: electrodynamics_service.py  mechanics_service.py  optics_service.py  sections_service.py  thermodynamics_service.py
gui/views/: electrodynamics_view.py  mechanics_view.py  module_view.py  optics_view.py  thermodynamics_view.py
gui/windows/: main_window.py
main/: __main__.py  consts.py
mechanics/: calculations.py  enum.py  main.py
optics/: calculations.py  enum.py  main.py
sections/: enum.py  main.py
thermodynamics/: calculations.py  enum.py  main.py
(+21 files in other folders)
