[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UltimatePhysicsCalculato"
version = "0.1.2"
description = "Physics exercises: mechanics, electrodynamics, optics, thermodynamics, sections"
readme = "README.md"
requires-python = ">=3.14,<4.0"
license = { text = "MIT" }
authors = [{ name = "TheKeisu" }]
keywords = ["physics", "education"]
dependencies = []

[project.urls]
Source = "https://github.com/TheKeisu/UltimatePhysicsCalculator"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
